--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
 <link href="jquery-mobile/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+/*setInterval(function(){
+	alert("Hello")
+	},3000);*/
+	
+	
+	var now                  = new Date().getTime(),
+    _60_seconds_from_now = new Date(now + 60*1000);
+
+window.plugin.notification.local.add({
+    id:         1, // is converted to a string
+    title:      'Reminder',
+    message:    'Dont forget to buy some flowers.',
+    repeat:     'weekly',
+    date:       _60_seconds_from_now,
+    foreground: 'foreground',
+    background: 'background'
+});
+
+function foreground (id) {
+    console.log('I WAS RUNNING ID='+id)
+}
+
+function background (id) {
+    console.log('I WAS IN THE BACKGROUND ID='+id)
+}
+
+</script>
 <style type="text/css">
 body,td,th {
 	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
