--- a/index.html
+++ b/index.html
@@ -13,26 +13,23 @@
 	},3000);*/
 	
 	
+	document.addEventListener('deviceready', function () {
+    // window.plugin.notification.local is now available
+	
 	var now                  = new Date().getTime(),
-    _60_seconds_from_now = new Date(now + 60*1000);
+    _60_seconds_from_now = new Date(now + 10*1000);
 
 window.plugin.notification.local.add({
-    id:         1, // is converted to a string
-    title:      'Reminder',
-    message:    'Dont forget to buy some flowers.',
-    repeat:     'weekly',
-    date:       _60_seconds_from_now,
-    foreground: 'foreground',
-    background: 'background'
+    id:      1,
+    title:   'Reminder',
+    message: 'Dont forget to buy some flowers.',
+    repeat:  'weekly',
+    date:    _60_seconds_from_now
 });
-
-function foreground (id) {
-    console.log('I WAS RUNNING ID='+id)
-}
-
-function background (id) {
-    console.log('I WAS IN THE BACKGROUND ID='+id)
-}
+	
+	
+	
+}, false);
 
 </script>
 <style type="text/css">
