--- a/index.html
+++ b/index.html
@@ -12,24 +12,7 @@
 	alert("Hello")
 	},3000);*/
 	
-	
-	document.addEventListener('deviceready', function () {
-    // window.plugin.notification.local is now available
-	
-	var now                  = new Date().getTime(),
-    _60_seconds_from_now = new Date(now + 10*1000);
-
-window.plugin.notification.local.add({
-    id:      1,
-    title:   'Reminder',
-    message: 'Dont forget to buy some flowers.',
-    repeat:  'weekly',
-    date:    _60_seconds_from_now
-});
-	
-	
-	
-}, false);
+	window.plugin.notification.local.add({ message: 'Great app!' });
 
 </script>
 <style type="text/css">
