--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
 <script type="text/javascript">
-/*setInterval(function(){
-	alert("Hello")
-	},3000);*/
-	
-	window.plugin.notification.local.add({ message: 'Great app!' });
+
+document.addEventListener('deviceready', function () {
+    alert("Hello");// window.plugin.notification.local is now available
+}, false);
 
 </script>
 <style type="text/css">
