--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 document.addEventListener('deviceready', function () {
     alert("Hello");// window.plugin.notification.local is now available
+	window.plugin.notification.local.add({ message: 'Great app!' });
 }, false);
 
 </script>
