--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 window.plugin.notification.badge.set(1);
 // or
-//window.plugin.notification.badge.set('1');
+window.plugin.notification.badge.set('3');
 
 </script>
 <style type="text/css">
