--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@ function badger() {
 	
 	
 	var cutnumber = $('#position').html();
-alert(cutnumber); 
+	alert(cutnumber); 
+	alert("Booo");
 	
 	window.plugin.notification.badge.set(1);
 // or
