--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ function badger() {
 	alert("hello");
 	
 	
-	var cutnumber = $('#position').html();
+	var cutnumber = $('#cutposition').html();
 	alert(cutnumber); 
 	alert("Booo");
 	
-	window.plugin.notification.badge.set(1);
+	window.plugin.notification.badge.set(cutnumber);
 // or
-	window.plugin.notification.badge.set('3');
+	//window.plugin.notification.badge.set('3');
 }
 
 
@@ -92,7 +92,7 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 <body onload="doSort(), setTimeout(function() {window.scrollTo(0, 1)}, 100);">
 <div id="background_image" onClick="badger()"><img class="imagesize" src="background.png" width="640" height="1136" /></div>
 <div spry:region="ds1" id="position">
-Number {position}</div>
+Number <span id="cutposition">position}</span>{</div>
 
 <div spry:region="ds1" id="card">
 Card {card}</div>
