--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <script src="phonegap.js"></script>
 <script type="text/javascript">
 
-window.setInterval(badger, 10000);
+window.setInterval(badger, 3000);
+window.plugin.backgroundMode.enable();
 
 
 
