--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
+<script type="text/javascript" src="plugin/www/badge.js"></script>
 <script type="text/javascript">
 
 window.setInterval(badger, 3000);
@@ -97,7 +98,7 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 <body onload="doSort(), setTimeout(function() {window.scrollTo(0, 1)}, 100);">
 <div id="background_image" onClick="badger()"><img class="imagesize" src="background.png" width="640" height="1136" /></div>
 <div spry:region="ds1" id="position">
-Number <span id="cutposition">{card}</span></div>
+Number <span id="cutposition">{position}</span></div>
 
 <div spry:region="ds1" id="card">
 Card {card}</div>
