--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ function badger() {
 	//window.plugin.notification.badge.set('3');
 }
 
-
+$('position').bind("DOMSubtreeModified",function(){
+  alert('changed');
+});
 
 
 
@@ -82,7 +84,8 @@ body {
 <script src="SpryAssets/SpryData.js" type="text/javascript"></script>
 <script type="text/javascript">
 
-var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml=1", "recordset/record", {sortOnLoad: "result_id", sortOrderOnLoad: "descending", useCache: false, loadInterval: 2000});
+var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml=1", "recordset/record", {sortOnLoad: "result_id", sortOrderOnLoad: "descending", useCache: false, loadInterval: 1000});
+
 </script>
 <meta content='initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 <meta name="apple-mobile-web-app-capable" content="yes">
