--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ function badger() {
 	//window.plugin.notification.badge.set('3');
 }
 
-$('position').bind("DOMSubtreeModified",function(){
+$('#cutposition').bind("DOMSubtreeModified",function(){
   alert('changed');
 });
 
