--- a/index.html
+++ b/index.html
@@ -28,9 +28,20 @@ function badger() {
 	//window.plugin.notification.badge.set('3');
 }
 
+
+
+
+
+$( document ).ready(function() {
+
 $('#cutposition').bind("DOMSubtreeModified",function(){
   alert('changed');
 });
+
+
+});
+
+
 
 
 
