--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 $( document ).ready(function() {
 window.setInterval(badger, 3000);
-window.plugin.backgroundMode.enable();
+//window.plugin.backgroundMode.enable();
 })
 
 function badger() {
@@ -86,7 +86,7 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 </head>
 
 <body onload="doSort(), setTimeout(function() {window.scrollTo(0, 1)}, 100);">
-<!--<div id="background_image" onClick="badger()"><img class="imagesize" src="background.png" width="640" height="1136" /></div>-->
+<div id="background_image" onClick="badger()"><img class="imagesize" src="background.png" width="640" height="1136" /></div>
 <div spry:region="ds1" id="position">
 Number <span id="cutposition">{position}</span></div>
 
