--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 $( document ).ready(function() {
 window.setInterval(badger, 3000);
-//window.plugin.backgroundMode.enable();
+window.plugin.backgroundMode.enable();
 })
 
 function badger() {
