--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 $( document ).ready(function() {
 window.setInterval(badger, 3000);
 window.plugin.backgroundMode.enable();
+
+
+$('#cutposition').bind("DOMSubtreeModified",function(){
+  alert('changed');
+});
+
+
 })
 
 function badger() {
