--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
 <script type="text/javascript">
+var cutnumber = $('#cutposition').html();
+var currentvalue = cutnumber;
 
 $( document ).ready(function() {
 window.setInterval(badger, 10000);
@@ -26,7 +28,7 @@ function badger() {
 	alert("Current Value is "+currentvalue);
 	
 	if (cutnumber != currentvalue) {
-		alert("Number changed Change");
+		alert("Number changed");
 		window.plugin.notification.badge.set(cutnumber);
 		var currentvalue = cutnumber;
 		alert("Current Value is now "+currentvalue);
