--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
 <script type="text/javascript">
-var cutnumber = $('#cutposition').html();
-var currentvalue = cutnumber;
+
+
 
 $( document ).ready(function() {
+
+
+var cutnumber = 0;
+var currentvalue = 0;
+
+
 window.setInterval(badger, 10000);
 window.plugin.backgroundMode.enable();
-
-
-
 
 
 })
 
 function badger() {
+	alert("cutnumber is "+cutnumber);
+	alert("Current Value is "+currentvalue);
+	
+	
 	var cutnumber = $('#cutposition').html();
 	alert("cutnumber is "+cutnumber);
 	alert("Current Value is "+currentvalue);
