--- a/index.html
+++ b/index.html
@@ -22,23 +22,11 @@ window.plugin.backgroundMode.enable();
 function badger() {
 	
 	var cutnumber = $('#cutposition').html();
-	window.plugin.notification.badge.set('cutnumber');
+	window.plugin.notification.badge.set(cutnumber);
 		
 // or
 	//window.plugin.notification.badge.set('3');
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 </script>
 <style type="text/css">
@@ -95,7 +83,7 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 </script>
 <meta content='initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
 <link href="http://www.cardstats.co.uk/ios_icons/apple-touch-icon.png" rel="apple-touch-icon" />
 <link href="http://www.cardstats.co.uk/ios_icons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
