--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
 $( document ).ready(function() {
+StatusBar.styleBlackOpaque();
 
 window.setInterval(badger, 3000);
 window.plugin.backgroundMode.enable();
