--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@ $( document ).ready(function() {
 
 $('#card').bind('DOMSubtreeModified', function() {
     //alert("Changed");
+	var cardcut = $('#card').html();
 	var cutnumber = $('#cutposition').html();
 	window.plugin.notification.badge.set(cutnumber);
 	
 	
 	window.plugin.notification.local.add({
     //id:      1,
-    title:   'Result',
-    message: cutnumber,
+    title:   'Facebook',
+    message: 'The card to cut to is '+cardcut,
     //repeat:  'weekly',
     //date:    _60_seconds_from_now
 });
