--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-$( document ).ready(function() {
+document.addEventListener("deviceready", function(){
 
 $('#card').bind('DOMSubtreeModified', function() {
     //alert("Changed");
