--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
 
 document.addEventListener("deviceready", function(){
-	
-	alert("Device Ready");
-	badger();
+	var cutnumber = 0;
+	var cardcut = 'KK';
+	//alert("Device Ready");
+	//badger();
 
 $('#card').bind('DOMSubtreeModified', function() {
     //alert("Changed");
