--- a/indexSPRY.html
+++ b/indexSPRY.html
@@ -5,13 +5,13 @@
 <title>ACAAN Result</title>
 <link href="jquery-mobile/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
 <link href="jquery-mobile/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
-<!--<script src="SpryAssets/xpath.js" type="text/javascript"></script>
+<script src="SpryAssets/xpath.js" type="text/javascript"></script>
 <script src="SpryAssets/SpryData.js" type="text/javascript"></script>
 <script type="text/javascript">
 
 var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml=1", "recordset/record", {sortOnLoad: "result_id", sortOrderOnLoad: "descending", useCache: false, loadInterval: 1000});
 
-</script>-->
+</script>
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
@@ -19,19 +19,6 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 
 
 document.addEventListener("deviceready", onDeviceReady, false);
-
-jQuery.ajax({
-url: "http://www.cardstats.co.uk/push_data_json.php",
-dataType:'json',
-success:function(response)
-{
-$('#cutposition').html(response.position );
-$('#cutcard').html(response.card );
-}
-});
-
-
-
 
 function onDeviceReady() {
     // Now safe to use the PhoneGap API
@@ -127,10 +114,10 @@ body {
 <body onload="{window.scrollTo(0, 1)}, 100);">
 <div id="background_image" onClick="badger();"><img class="imagesize" src="background.png" width="640" height="1136" /></div>
 <div spry:region="ds1" id="position">
-Number <span id="cutposition"></span></div>
+Number <span id="cutposition">{position}</span></div>
 
 <div spry:region="ds1" id="card">
-Card <span id="cutcard"></span></div>
+Card {card}</div>
 
 
 </body>
