--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 
 document.addEventListener("deviceready", onDeviceReady, false);
 
-setTimeout(function(){
+/*setTimeout(function(){
 	
 jQuery.ajax({
 url: "http://www.cardstats.co.uk/push_data_json.php",
@@ -32,7 +32,7 @@ $('#cutcard').html(response.card );
 }
 });
 	
-	},1000);
+	},1000);*/
 
 
 
@@ -43,6 +43,35 @@ function onDeviceReady() {
 	var cutnumber = 0;
 	var cardcut = 'KK';
 	window.plugin.backgroundMode.enable();
+	
+var getdata = function() {
+    $.ajax({
+      url: 'http://www.cardstats.co.uk/push_data_json.php',
+      dataType: 'json',
+      cache: true,
+      timeout: 30000,
+      success: function(data) {
+
+            // $('#output ul').append('<li>The feed loads fine');
+            $('#cutposition').html(response.position );
+			$('#cutcard').html(response.card );
+
+        },
+        error: function(){
+            $('#cutposition').append('Error');
+			$('#cutcard').append('Error');
+        }
+    });
+    setTimeout(getdata, 1000);
+}
+
+getdata();	
+	
+	
+	
+	
+	
+	
 	
 	
 $('#card').bind('DOMSubtreeModified', function() {
