--- a/index.html
+++ b/index.html
@@ -70,9 +70,10 @@ else
 	window.plugin.notification.badge.set(cutnumber);
 	
 	var cardcut = $('#cutcard').text();
+	var cardpos = $('#cutposition').text();
 	window.plugin.notification.local.add({
     title: cardcut,
-    message: cardcut,
+    message: cardpos,
 });
   }
 }
