--- a/index.html
+++ b/index.html
@@ -16,36 +16,17 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
 <script type="text/javascript">
+// Wait for device API libraries to load
+    //
+    function onLoad() {
+        document.addEventListener("deviceready", onDeviceReady, false);
+    }
 
-
-document.addEventListener("deviceready", onDeviceReady, false);
-
-function onDeviceReady() {
-    // Now safe to use the PhoneGap API
-	
-$('#card').bind('DOMSubtreeModified', function() {
-	/*var cardcut = $('#card').text();
-	var cutnumber = $('#cutposition').text();
-	window.plugin.notification.badge.set(cutnumber);*/
-	
-});
-	
-}
-
-function badger() {
-	//alert("Badger run");
-	var cutnumber = $('#cutposition').text();
-	
-	}	
-
-$(window).load(function() {
-    //dom not only ready, but everything is loaded
-	//alert("It's loaded!") 
-	badger();
-});
-
-
-setInterval(function(){
+    // device APIs are available
+    //
+    function onDeviceReady() {
+        // Now safe to use device APIs
+		setInterval(function(){
 	jQuery.ajax({
 	url: "http://www.cardstats.co.uk/push_data_json.php",
 	dataType:'json',
@@ -80,7 +61,51 @@ else
 });
 	
 	},1000);
-window.plugin.backgroundMode.enable();
+window.plugin.backgroundMode.enable();	
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+/*document.addEventListener("deviceready", onDeviceReady, false);
+
+function onDeviceReady() {
+    // Now safe to use the PhoneGap API
+	
+
+	
+	
+$('#card').bind('DOMSubtreeModified', function() {
+	var cardcut = $('#card').text();
+	var cutnumber = $('#cutposition').text();
+	window.plugin.notification.badge.set(cutnumber);
+	
+});
+	
+}*/
+
+/*function badger() {
+	//alert("Badger run");
+	var cutnumber = $('#cutposition').text();
+	
+	}	
+
+$(window).load(function() {
+    //dom not only ready, but everything is loaded
+	//alert("It's loaded!") 
+	badger();
+});*/
+
+
+
 
 </script>
 
@@ -141,7 +166,7 @@ body {
 <link href="http://www.cardstats.co.uk/ios_icons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
 </head>
 
-<body onload="{window.scrollTo(0, 1)}, 100);">
+<body onload="onLoad()">
 <div id="background_image" onClick="badger();"><img class="imagesize" src="background.png" width="640" height="1136" /></div>
 <div id="position">
 Number <span id="cutposition">00</span></div>
