--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html xmlns:spry="http://ns.adobe.com/spry">
 <head>
 <meta charset="UTF-8">
-<title>ACAAN Result</title>
-<link href="jquery-mobile/jquery.mobile.theme-1.0.min.css" rel="stylesheet" type="text/css"/>
-<link href="jquery-mobile/jquery.mobile.structure-1.0.min.css" rel="stylesheet" type="text/css"/>
+<title>ACAAN</title>
+
 <!--<script src="SpryAssets/xpath.js" type="text/javascript"></script>
 <script src="SpryAssets/SpryData.js" type="text/javascript"></script>
 <script type="text/javascript">
@@ -15,52 +14,7 @@ var ds1 = new Spry.Data.XMLDataSet("http://www.cardstats.co.uk/push_data.php?xml
 <script src="jquery-mobile/jquery-1.6.4.min.js" type="text/javascript"></script>
 <script src="jquery-mobile/jquery.mobile-1.0.min.js" type="text/javascript"></script>
 <script src="phonegap.js"></script>
-
-<style type="text/css">
-body,td,th {
-	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
-	font-size: 26px;
-	color: #333;
-}
-body {
-	background-color: #000;
-	margin: 0px;
-	padding: 0px;	
-	
-}
-#background_image {
-	margin: 0px;
-	padding: 0px;
-	width: 100%;
-
-}
-.imagesize {
-	width: 100%;
-	height: auto;
-}
-#position {
-	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
-	font-size: 12px;
-	position: absolute;
-	font-style: normal;
-	top: 66px;
-	left: 19px;
-	color: #FFF;
-	text-align: right;
-}
-#card {
-	font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
-	font-size: 12px;
-	position: absolute;
-	font-style: normal;
-	top: 66px;
-	left: 102px;
-	color: #FFF;
-	height: 2px;
-	text-align: center;
-}
-
-</style>
+<script type="text/javascript" src="acaan.js"></script>
 
 <meta content='initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -70,6 +24,7 @@ body {
 <link href="http://www.cardstats.co.uk/ios_icons/apple-touch-icon-76x76.png" rel="apple-touch-icon" sizes="76x76" />
 <link href="http://www.cardstats.co.uk/ios_icons/apple-touch-icon-120x120.png" rel="apple-touch-icon" sizes="120x120" />
 <link href="http://www.cardstats.co.uk/ios_icons/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+<link href="acaan.css" rel="stylesheet" type="text/css">
 </head>
 
 <body onload="onLoad()">
